--- a/htmlexample/example/exam01_htag.html
+++ b/htmlexample/example/exam01_htag.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>h 태그 예제 - 다양한 제목 사양</title>
 </head>
 <body>
-    <h1>오늘 처음 생성하여 실행할 웹 페이지입니다.</h1>
+    <h1>나의 첫 번째 웹사이트</h1>
+    <h2>소개</h2>
+    <p>이 웹페이지는 HTML 학습을 위해 만들어졌습니다.</p>
+    <h3>HTML이란?</h3>
+    <p>HTML은 웹 문서의 구조를 만드는 마크업 언어입니다.</p>
+    <h2>웹 개발 기본 요소</h2>
+
+    <h3>1. HTML</h3>
+    <h4>웹 구조의 정의</h4>
+
+    <h3>2. CSS</h3>
+    <h4>디자인과 스타일링</h4>
+
+    <h3>3. JavaScropt</h3>
+    <h4>웹의 동작과 기능 구현</h4>
+
+    <h2>연락처</h2>
+    <h5>이메일 : javauser@naver.com</h5>
+    <h6>◎ 2025 나의 웹페이지. 모든 권리 보유</h6>
+    <h2>추가 정보</h2>
 </body>
 </html>
