--- a/htmlexample/example/exam20_inputtag.html
+++ b/htmlexample/example/exam20_inputtag.html
@@ -45,9 +45,9 @@
                 <td>week(연도-주)</td>
             </tr>
             <tr>
-                <td><input type="date" /> </td>
-                <td><input type="month" /></td>
-                <td><input type="week" /></td>
+                <td><input type="date" value="2025-07-04"/></td>
+                <td><input type="month" value="2025-07"/></td>
+                <td><input type="week" value="2025-W27"/></td>
             </tr>
         </table>
     </form>
@@ -61,8 +61,8 @@
                 <td>datetime-local(현지시간)</td>
             </tr>
             <tr>
-                <td><input type="time" /></td>
-                <td><input type="datetime-local" /></td>
+                <td><input type="time" value="16:00"/></td>
+                <td><input type="datetime-local" value="2025-07-04 16:00"/></td>
             </tr>
         </table>
     </form>
